# PocketRelayManager

./: README.md  index.html  package.json  vite.config.ts
old/api/: request.ts
old/components/: AccessProvider.tsx  BaseUrl.tsx  Home.tsx  Login.tsx
old/components/inventory/: Characters.tsx  Consumables.css  Consumables.tsx  Gear.tsx  Inventory.tsx  WeaponMods.css  WeaponMods.tsx  Weapons.css  Weapons.tsx
old/styles/: characters.scss  global.scss
src/: App.tsx  inventory.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/api/: models.ts  routes.ts
src/assets/styles/: card.scss  global.scss  inventory.scss
src/components/: Character.css  Characters.tsx  Collapse.scss  Collapse.tsx  Consumables.tsx  Gear.css  Gear.tsx  Inventory.tsx  LevelSelect.scss  LevelSelect.tsx  Loader.scss  Loader.tsx  PlayerClass.tsx  RequireAuth.tsx  WeaponMods.tsx  Weapons.tsx
src/components/game/: Game.scss  Game.tsx  GamePlayer.tsx
src/components/inventory/: Character.scss  Character.tsx  Characters.tsx  Consumable.scss  Consumable.tsx  Gear.scss  Gear.tsx  LeveledCard.scss  LeveledCard.tsx  Weapon.scss  Weapon.tsx  WeaponMod.scss  WeaponMod.tsx
src/contexts/: AppContext.tsx
src/data/: games.ts  inventory.ts
src/hooks/: init.ts  inventory.ts  number.ts
src/pages/: Games.scss  Games.tsx  Home.scss  Home.tsx  Initialize.scss  Initialize.tsx  Login.tsx  Manage.scss  Manage.tsx  Players.scss  Players.tsx
src/pages/manage/: Games.tsx  Home.tsx  Manage.scss  Manage.tsx  Players.tsx
src/pages/player/: Basic.tsx  Classes.tsx  Inventory.scss  Inventory.tsx  Player.tsx
(+27 files in other folders)
