[package]
name = "pocket-relay-manager"
version = "0.1.2"
description = "Pocket Relay Manager App"
authors = ["Jacobtread <jacobtread@gmail.com>"]
license = "MIT"
repository = "https://github.com/PocketRelay/PocketRelayManager"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
tauri = { version = "1.1", features = ["api-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
